force-app/main/default/objects/eDealer_Log__c/eDealer_Log__c.object-meta.xml
<CustomObject>
    <label>eDealer Log</label>
    <nameField>
        <displayFormat>Log-{000}</displayFormat>
        <label>Dealer Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eDealer Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>