force-app/main/default/objects/eDealer_Log__c/fields/Apex_Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Apex_Exception_Message__c</fullName>
    <label>Apex Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>