force-app/main/default/objects/eDealer_Log__c/fields/Apex_Trace__c.field-meta.xml
<CustomField>
    <fullName>Apex_Trace__c</fullName>
    <label>Apex Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>