force-app/main/default/objects/eDealer_Log__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emergency API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>