force-app/main/default/objects/eDealer_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cache API Response</fullName>
            </value>
            <value>
                <fullName>Apex Exception</fullName>
            </value>
            <value>
                <fullName>API Error</fullName>
            </value>
            <value>
                <fullName>API Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>