force-app/main/default/objects/eDealer_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apex_Trace__c</columns>
    <columns>API_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>API_Request__c</columns>
    <columns>API_Response__c</columns>
    <columns>Log_Type__c</columns>
    <columns>Apex_Exception_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Ilich Castro</value>
    </filters>
    <label>All</label>
</ListView>